demo/consul/gateway-configuration.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: example-gateway
spec:
  gatewayClassName: consul-api-gateway
  listeners:
  - protocol: TCP
    port: 9090
    name: http
    allowedRoutes:
      namespaces:
        from: Same
    tls:
      certificateRefs:
        - name: consul-server-cert
